Atualização - adicionado o projeto jumbotron

--- a/HTML/cartoes.html
+++ b/HTML/cartoes.html
@@ -30,7 +30,7 @@
     <!-- https://source.unsplash.com/radom/600x200-->
     <h3 class="border-bottom">Cartão com imagem</h3>
     <div class="card">
-      <img class="card-img-top" src="https://source.unsplash.com/radom/600x200">
+      <img class="card-img-top" src="https://source.unsplash.com/radom/600x200" style="width: 600px; height: 200px;">
       <div class="card-body">
         <h4 class="card-title">Título do cartão</h4>
         <h6 class="card-subtitle">Subtítulo do cartão</h6>
@@ -43,7 +43,7 @@
 
     <h3 class="border-bottom">Cartão com imagem sobreposta</h3>
     <div class="card text-white">
-      <img class="card-img" src="https://source.unsplash.com/radom/600x250">
+      <img class="card-img" src="https://source.unsplash.com/radom/600x250" style="width: 600px; height: 250px;">
       <div class="card-img-overlay">
         <h4 class="card-title">Título do cartão</h4>
         <h6 class="card-subtitle">Subtítulo do cartão</h6>
